--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -72,6 +72,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="insert_image">Resim Ekle</string>
     <string name="contributors">Katkıda Bulunanlar</string>
     <string name="save_location">Kayıt konumu</string>
+    <string name="saved_location_to">%s\'a Kaydedildi</string>
     <string name="select_storage_folder">Depolama klasörünü seç</string>
     <string name="licenses">Lisanslar</string>
     <string name="changelog">Değişme Günlüğü</string>
@@ -80,6 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="show_third_party_licenses">Üçüncü parti lisansları göster</string>
     <string name="language_change_restart_description">Uygulamanın dilini değiştir. Değişikliklerin etkili olması için uygulamayı yeniden başlat</string>
     <string name="language">Dil</string>
+    <string name="storage_permission_required">Depolama izni, dosyaları okumak ve yazmak için gereklidir</string>
     <string name="open_with">Şununla aç</string>
     <string name="sort_by">Sırala</string>
     <string name="date">Tarihe göre sırala</string>
@@ -194,6 +196,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="unordered_list_char_asterisk">Yıldız işareti (*)</string>
     <string name="unordered_list_char_plus">Artı işareti (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">Markor sadece yerel, çevrimdışı kullanılabilir belgeleri düzenleyebilir ve tam dosya yolunu sağlamayan dosya yöneticilerini desteklemez.</string>
+    <string name="file_does_not_exist_and_cant_be_created">Dosya veya dizin mevcut değil ve oluşturulamıyor</string>
+    <string name="permissions">İzinler</string>
+    <string name="permission_paths_revert">Varsayılan dosya yollarına geri dönülsün mü?</string>
+    <string name="permission_not_granted">İzin verilmedi</string>
     <string name="sync_to_local_folder_notice">Not: Bir eşitleme uygulaması kullanırsanız, dosyalar bilinen veya özel klasörlerde bulunabilir, Markor\'un belge klasörünü değiştirerek dosyaları açabilir veya dosyayı farklı bir dosya yöneticisi ile açabilirsiniz.</string>
     <string name="vertical_alignment">Dikey hizalama</string>
     <string name="horizontal_alignment">Yatay hizalama</string>
@@ -440,4 +446,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="document_error_clip">Karşılaşılan hata: Metin panoya kopyalandı.</string>
     <string name="wont_save_min_length">%d\'den az karaktere sahip dosyalar, veri kaybını önlemek için otomatik olarak kaydedilmez.</string>
     <string name="advanced_filtering_help"><![CDATA[<small><a href="https://www.github.com/gsantner/markor/discussions/1940">Gelişmiş filtreleme sözdizimi</a></small>]]></string>
+    <string name="filter">Filtrele</string>
 </resources>
